# observatorio-congreso

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_analisis_diputados.sh  run_backfill_fichas.sh  scrape_diputados_all.sh  scrape_diputados_remaining.sh
analysis/: __init__.py  centralidad.py  comunidades.py  config.py  constants.py  covotacion.py  covotacion_dinamica.py  db.py  efecto_curul_tipo.py  efecto_genero.py  evolucion_partidos.py  nominate.py  poder_empirico.py  poder_partidos.py  run_analysis.py  run_covotacion_dinamica.py  run_efecto_curul_tipo.py  run_efecto_genero.py  run_evolucion_partidos.py  run_nominate.py  run_trayectorias.py  runner_utils.py  trayectorias.py  visualizacion.py  visualizacion_articulo.py  visualizacion_dinamica.py  visualizacion_nominate.py  visualizacion_poder.py
analysis/analisis-bicameral/output/: calificada_comparada.csv  disciplina_comparada.csv  poder_comparado.csv  (+2 more)
analysis/output/: disidentes.csv  poder_34.csv  poder_calificada.csv  poder_completo.csv  poder_simple.csv  reforma_judicial.csv
analysis/scripts/: export_observatorio_json.py
cache/: .gitignore
data/: RelacionesPoderCongreso.gv
db/: __init__.py  constants.py  helpers.py  id_generator.py  init_db.py  init_senado_db.py  schema.sql  schema_senado.sql  senado_schema.sql
db/archived/: README.md  fix_org_basura.py  migrate_legacy_pk.sql  senado_schema.sql
db/migrations/: README.md  add_requirement_column.py  add_source_id.py  backfill_curul_tipo_senadores.py  backfill_fichas_diputados.py  backfill_genero.py  backfill_membership_fechas.py  backfill_org_fechas.py  backfill_requirement.py  backfill_wikidata.py  deduplicar_counts_diputados.py  deduplicar_votos_diputados.py  fix_curul_tipo.py  fix_curul_tipo_manual.py  fix_duplicados.py  fix_fk_violations.py  fix_lxv_senado.py  fix_org_basura.py  fix_vote_group.py  limpiar_fantasmas_y_total.py  limpiar_org_basura_v2.py  migrate_caso_cero.py  purge_lxv_diputados.py  queries_demo.py  recalcular_resultados.py  recalcular_ve_senado_v2.py
db/tests/: test_helpers.py
diputados/diputados-x-genero/: Dip-Femenino-LXV-LXVI.csv  Dip-Masculino-LXV-LXVI.csv
diputados/scraper/: client.py  config.py  legislatura.py  loader.py  models.py  pipeline.py  transformers.py
docs/: arquitectura-curl_cffi.md  arquitectura.md  conclusiones-reforma-electoral.md  data-conventions.md  datos-contra-narrativa-poder-legislativo-lxvi.md  disidentes-morena.md  disidentes-pt.md  disidentes-pvem.md  guion-flujo-etl.md  investigacion_datos_anomalos.md  plan-b-reforma-electoral.md  propuesta-fase3-longitudinal.md  propuestas-coverage-bd.md
guion/: schema-unificado-limpiezas.md
scraper/: __init__.py  client.py  config.py  legislatura.py  loader.py  pipeline.py  transformers.py
scraper/parsers/: composicion.py  desglose.py  diputado.py  nominal.py  votaciones.py
scraper/utils/: __init__.py  text_utils.py
scraper_congreso/diputados/: __main__.py  client.py  config.py  legislatura.py  loader.py  pipeline.py  transformers.py
scraper_congreso/senadores/: client.py  config.py
scraper_congreso/utils/: base_loader.py  config.py  db_helpers.py  db_utils.py  id_generator.py  logging_config.py  text_utils.py
scraper_sil/: __init__.py  cli.py  client.py  config.py  models.py  session_manager.py
scraper_sil/loaders/: __init__.py  sil_loader.py
scraper_sil/parsers/: __init__.py  busqueda.py  detalle.py  resultados.py  votos.py
scraper_sil/pipelines/: __init__.py  legislature_pipeline.py  sil_pipeline.py
scripts/: backup_db.sh  cache_cleaner.py  clean_cache.sh  mantener.sh  queries_demo.py  run_backfill_fichas.sh  scrape_diputados_all.sh  scrape_senado_perfiles.sh  scrape_senado_votaciones.sh
senado/scraper/: __init__.py  __main__.py  cli.py  cli_curl_cffi.py  client.py  config.py  congreso_loader.py  models.py  parsers_lxvi.py  pipeline.py  transformers.py  urls.py
senado/scrapers/: __init__.py
teoria/: articulo_observatorio_secciones1-3.md  congreso-congelado-dinamica-legislativa.md  observatorio-congreso-poder-disciplina-lxvi.md  observatorio-lxvi-poder-disciplina-oposicion.md  secciones-4-7-articulo2.md
teoria/metodologia/: deteccion-actores-externos-clustering-residuos.md  relaciones-de-poder-axiomas-y-pesos.md
tests/: conftest.py  test_db_helpers.py  test_legacy_parser.py  test_poder_indices.py  test_schema.py  test_schema_constraints.py  test_scraping_validation.py  test_sil_scraper.py  test_text_utils.py  test_transformers_diputados.py  test_transformers_senado.py
tests/diputados/: test_loader.py  test_transformers.py
tests/senadores/: test_loader.py  test_transformers.py  test_waf_detection.py
utils/: __init__.py  db_utils.py  text_utils.py
utils/tests/: test_text_utils.py
(+132 files in other folders)
