[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "observatorio-congreso"
version = "0.1.0"
description = "Base de datos y análisis del Congreso mexicano (Senado + Cámara de Diputados)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Scraping
    "curl_cffi>=0.15.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    # Modelado de datos
    "pydantic>=2.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]
analysis = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "networkx>=3.2",
    "matplotlib>=3.8",
    "polars>=0.20",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (formatter handles this)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (sometimes less readable)
    "RUF001", # ambiguous unicode in strings (× σ − are intentional in analysis)
    "RUF002", # ambiguous unicode in docstrings
    "RUF003", # ambiguous unicode in comments
    "E741",   # ambiguous variable name l/O (common in lambdas: lambda l: ...)
    "B905",   # zip() without strict= (too noisy, non-critical)
]

[tool.ruff.lint.isort]
known-first-party = ["scraper_congreso", "db", "analysis"]

[tool.ruff.lint.per-file-ignores]
"db/migrations/*" = ["E402", "F821"]          # sys.path hack + legacy undefined refs
"db/archived/*" = ["E402", "F821"]            # archived scripts, no longer maintained
"analysis/*" = ["F841", "B007", "SIM102", "RUF059", "E402", "RUF034"] # analysis scripts are exploratory
"tests/*" = ["S101"]                          # allow assert in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests", "db/tests"]
pythonpath = ["."]
